--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ header nav.bg-light {
 	background-color: #563d7c !important;
 }
 
-header nav ul{
+header nav ul {
 	margin-left: auto;
 }
 
@@ -19,9 +19,9 @@ header nav ul li a {
 }
 
 header .logo {
-    display: flex;
-    height: 100%;
-    align-items: center;
+	display: flex;
+	height: 100%;
+	align-items: center;
 }
 
 header .logo a {
@@ -33,8 +33,8 @@ header .logo a {
 footer {
 	background-color: #563d7c;
 	text-align: center;
-    color: #fff;
-    padding: 10px 0;
+	color: #fff;
+	padding: 10px 0;
 }
 
 footer p {
@@ -45,10 +45,61 @@ footer p {
 	padding: 30px 0;
 }
 
+.main-content.user-content {
+	background: #eeeeee;
+}
+
 .main-content .title-page {
 	text-align: center;
 }
 
 .mt-30 {
 	margin-top: 30px;
+}
+
+.user-form {
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
+
+.form-signin {
+	max-width: 380px;
+	padding: 15px 35px 45px;
+	margin: 0 auto;
+	background-color: #fff;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.form-signin .form-signin-heading {
+	text-align: center;
+}
+
+.form-signin .form-signin-heading, .form-signin .checkbox {
+	margin-bottom: 30px;
+}
+
+.form-signin .checkbox {
+	font-weight: normal;
+}
+
+.form-signin .form-control {
+	position: relative;
+	font-size: 16px;
+	height: auto;
+	padding: 10px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.form-signin .form-control:focus {
+	z-index: 2;
+}
+
+.form-signin input[type="text"] {
+	margin-bottom: 20px;
+}
+
+.form-signin input[type="password"] {
+	margin-bottom: 20px;
 }
