--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,7 +63,7 @@ footer p {
 }
 
 .form-signin {
-	max-width: 380px;
+	max-width: 410px;
 	padding: 15px 35px 45px;
 	margin: 0 auto;
 	background-color: #fff;
@@ -72,10 +72,11 @@ footer p {
 
 .form-signin .form-signin-heading {
 	text-align: center;
+	margin-bottom: 30px;
 }
 
-.form-signin .form-signin-heading, .form-signin .checkbox {
-	margin-bottom: 30px;
+.form-signin .checkbox {
+	margin-bottom: 5px;
 }
 
 .form-signin .checkbox {
@@ -94,12 +95,4 @@ footer p {
 
 .form-signin .form-control:focus {
 	z-index: 2;
-}
-
-.form-signin input[type="text"] {
-	margin-bottom: 20px;
-}
-
-.form-signin input[type="password"] {
-	margin-bottom: 20px;
 }
