Update links & Auth check

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ header nav ul {
 	margin-left: auto;
 }
 
-header nav ul li a {
+header nav ul li a, header nav ul li span {
 	color: #fff !important;
 }
 
