--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,21 @@ header nav ul {
 	margin-left: auto;
 }
 
+header nav ul li:not(:last-child) {
+	margin-right: 20px;
+}
+
+header nav ul li a {
+	padding-left: 0 !important;
+    padding-right: 0 !important;
+    padding-bottom: 2px !important;
+    border-bottom: 1px solid transparent;
+}
+
+header nav ul li.active a {
+    border-bottom: 1px solid #fff;
+}
+
 header nav ul li a, header nav ul li span {
 	color: #fff !important;
 }
