--- a/public/css/app.css
+++ b/public/css/app.css
@@ -46,6 +46,10 @@ footer p {
   margin-bottom: 0;
 }
 
+.color-red {
+  color: #ff0000;
+}
+
 .user-info {
   margin-top: 30px;
   font-weight: bold;
