--- a/public/css/app.css
+++ b/public/css/app.css
@@ -122,6 +122,7 @@ footer p {
 .material-table {
   margin-top: 30px;
   margin-bottom: 30px;
+  overflow-y: auto;
 }
 .material-table table th {
   font-size: 16px !important;
